testing a quick fix on mobile

--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -41,3 +41,9 @@ $desktop: 1280;
     @content;
   }
 }
+
+@include mobile {
+  body {
+    position: fixed;
+  }
+}
